I let mighty mypy gods pee into my mouth. AGAIN.

--- a/test-data/test-custom-target.yml
+++ b/test-data/test-custom-target.yml
@@ -15,7 +15,8 @@
         from lxml.etree import ParserTarget
         class Target1(ParserTarget):
           def start(self, tag, attrib) -> None: ...
-          def close(self) -> str: ...
+          def close(self) -> str:
+            return ''
         class Target2(ParserTarget):
           def start(self, tag, attrib, nsmap) -> None: ...
           def close(self) -> Optional[List[str]]: ...
