--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy >= 0.982, < 0.990
+    mypy ~= 1.0
     {[common_dep]deps}
 skip_install = true
 commands =
