--- a/test-data/test-cssselect.yml
+++ b/test-data/test-cssselect.yml
@@ -50,14 +50,14 @@
     root: etree._Element
     expr1: bytes
     expr2: int
-    result = root.cssselect({{ args }})  # E: Argument 1 to "cssselect" of "_Element" has incompatible type "{{ wrong_type }}"; expected "str"
+    result = root.cssselect({{ args }})  # E: Argument 1 to "cssselect" of "_Element" has incompatible type "{{ wrong_type }}"; expected "str"  [arg-type]
 
 - case: etree_cssselect_bad_arg2
   main: |
     from lxml import etree
     root: etree._Element
-    result = root.cssselect('tag', 'xml')  # E: Too many positional arguments for "cssselect" of "_Element"
-    result = root.cssselect('tag', translator='junk')  # E: Argument "translator" to "cssselect" of "_Element" has incompatible type "Literal['junk']"; expected "Union[LxmlTranslator, Literal['xml', 'html', 'xhtml']]"
+    result = root.cssselect('tag', 'xml')  # E: Too many positional arguments for "cssselect" of "_Element"  [misc]
+    result = root.cssselect('tag', translator='junk')  # E: Argument "translator" to "cssselect" of "_Element" has incompatible type "Literal['junk']"; expected "Union[LxmlTranslator, Literal['xml', 'html', 'xhtml']]"  [arg-type]
 
 - case: html_cssselect_method
   parametrized:
@@ -81,10 +81,10 @@
     elem: HtmlElement
     expr1: bytes
     expr2: int
-    result = elem.cssselect({{ args }})  # E: Argument 1 to "cssselect" of "HtmlMixin" has incompatible type "{{ wrong_type }}"; expected "str"
+    result = elem.cssselect({{ args }})  # E: Argument 1 to "cssselect" of "HtmlMixin" has incompatible type "{{ wrong_type }}"; expected "str"  [arg-type]
 
 - case: html_cssselect_bad_arg2
   main: |
     from lxml.html import HtmlElement
     elem: HtmlElement
-    result = elem.cssselect('ul > li', 'junk')  # E: Argument 2 to "cssselect" of "HtmlMixin" has incompatible type "Literal['junk']"; expected "Union[LxmlTranslator, Literal['xml', 'html', 'xhtml']]"
+    result = elem.cssselect('ul > li', 'junk')  # E: Argument 2 to "cssselect" of "HtmlMixin" has incompatible type "Literal['junk']"; expected "Union[LxmlTranslator, Literal['xml', 'html', 'xhtml']]"  [arg-type]
