Prevent tox 4.x usage
- Tox4 seems to cause infinite thread hanging in Github workers when running
another provisional tox.
- New tox-gh-actions cause traceback in parallel tox run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,8 +59,9 @@ jobs:
       with:
         name: dist
 
+    # thread hanging in tox 4.4, tests complete but refuse to quit
     - name: Install dependencies
-      run: pip install -v tox
+      run: pip install -v "tox < 4"
 
     - name: Test sdist
       run: tox --installpkg *.tar.gz --result-json test-job-${{ strategy.job-index }}.json -v
