--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist = py{38, 39, 310, 311}
 requires =
-    tox >3,<4
-    tox-gh-actions
+    tox ~=3.25
+    tox-gh-actions ~= 2.11
 isolated_build = True
 
 [gh-actions]
@@ -20,7 +20,7 @@ deps =
 [testenv]
 commands = pytest {posargs}
 deps =
-    pytest-mypy-plugins >= 1.10.1
+    pytest-mypy-plugins ~= 1.10, != 1.10.0
     {[testenv:mypy]deps}
 
 [testenv:format]
