Revamp github workflow
- Refactor so that workflow_run hack become unnecessary
- Caching

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,67 +8,9 @@ on:
       - '.git*'
       - '**.md'
       - 'LICENSE'
-    tags:
-      - '20*'
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: pip install -v tox
-
-    - name: Pre-validation
-      env:
-        TOX_PARALLEL_NO_SPINNER: 1
-      run: tox -p -v -e mypy,pyright
-
-    - name: Build sdist and wheel
-      run: tox -v -e build
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: dist
-        path: dist/*
-        if-no-files-found: error
-
-  test:
-    runs-on: ubuntu-22.04
-    needs: build
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Download artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: dist
-
-    # thread hanging in tox 4.4, tests complete but refuse to quit
-    - name: Install dependencies
-      run: pip install -v "tox < 4"
-
-    - name: Test sdist
-      run: tox --installpkg *.tar.gz --result-json test-job-${{ strategy.job-index }}.json -v
-
-    - name: Upload log artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: log
-        path: test-job-*.json
-        if-no-files-found: error
+  all_tests:
+    uses: ./.github/workflows/test_inc.yml
+    with:
+      gitref: ${{ github.ref }}
