--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,28 @@
 name: Publish releases
 
 on:
-  workflow_run:
-    workflows: [Build and test]
-    types: [completed]
-    branches:
-      - 20*
+  push:
+    tags:
+      - '20*'
+permissions:
+  contents: write
 
 jobs:
+  all_tests:
+    uses: ./.github/workflows/test_inc.yml
+    with:
+      gitref: ${{ github.ref }}
+
   release:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.event == 'push'
+    needs: all_tests
     runs-on: ubuntu-latest
     steps:
 
-    - name: Download artifact from previous workflow
-      uses: dawidd6/action-download-artifact@v2
+    - name: Download artifact
+      uses: actions/download-artifact@v3
       with:
-        workflow: test.yml
         name: dist
         path: dist
-        check_artifacts: true
 
     - name: Publish draft GitHub release
       uses: ncipollo/release-action@v1
@@ -32,8 +33,8 @@ jobs:
 
     - name: Publish to Test PyPI
       if: >
-        contains(github.event.workflow_run.head_branch, 'dev') ||
-        contains(github.event.workflow_run.head_branch, 'pre')
+        contains(github.ref_name, 'rc') ||
+        contains(github.ref_name, 'pre')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
@@ -44,8 +45,8 @@ jobs:
 
     - name: Publish to PyPI
       if: >
-        ! contains(github.event.workflow_run.head_branch, 'dev') &&
-        ! contains(github.event.workflow_run.head_branch, 'pre')
+        ! contains(github.ref_name, 'rc') &&
+        ! contains(github.ref_name, 'pre')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
